--- a/client/views/index.ng.html
+++ b/client/views/index.ng.html
@@ -6,13 +6,13 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a href="#" class="navbar-brand"><img src="img/logo.png" alt="Logo"/></a>
+    <a href="#/" class="navbar-brand"><img src="img/logo.png" alt="Logo"/></a>
   </div>
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav navbar-right">
-      <li><a class="brown" href="#/manager">Manager</a></li>
+      <li><a class="brown" ng-if="currentUser" href="#/manager">Manager</a></li>
       <li ng-if="!currentUser"><a class="brown" href="#/login">Login</a></li>
-      <li><a class="brown" href="#" ng-if="currentUser" ng-click="logout()">Logout {{currentUser.email}}</a></li>
+      <li><a class="brown" href="#/" ng-if="currentUser" ng-click="logout()">Logout {{currentUser.email}}</a></li>
     </ul>
   </div>
 </header>
